# AiNomy

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ai.env.tpl  analyse.env.tpl  auth.env.tpl  docker-compose.yml
api-ai/: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  alembic.ini  prod.sh  pyproject.toml  requirements.txt
api-ai/alfred/: ci.py  datastore.py  download.py  fake.py  lint.py  local.py  prod.py  run.py  tests.py
api-ai/database/: env.py
api-ai/database/versions/: 2d276920e1cf_generate_database.py
api-ai/docker/: .env.tpl  Dockerfile  docker-compose.yml
api-ai/environments/fake/: .env.tpl  Procfile
api-ai/environments/local/: .env.tpl  Procfile  Procfile.datalayer  Procfile.initdb  Procfile.migrate  docker-compose.yml
api-ai/environments/prod/: .env.tpl  Procfile.initdb  Procfile.initmodel
api-ai/fake/fake_datasources/: README.md  categories.yml  diseases.yml  key_factors.yml  tags.yml
api-ai/scripts/: download_alzheimer_model.py  download_pneumonia_model.py
api-ai/server/: __init__.py  env.py  host_context.py
api-ai/server/app/: injector.py
api-ai/server/app/web/: webapp.py
api-ai/server/domain/: datastore.py
api-ai/server/domain/entity/: base.py  category.py  disease.py  improve_model.py  key_factor.py  tag.py
api-ai/server/infrastructure/: flask_datastore.py
api-ai/server/lib/: attr_mapping.py  dynamic_import.py  list_utils.py
api-ai/tests/acceptances/: test_empty.py
api-ai/tests/fixtures/: __init__.py
api-ai/tests/migrations/: test_alembic_migrations.py
api-ai/tests/units/: test_webapp.py
(+129 files in other folders)
