[tool.poetry]
name = "api-ai"
version = "1.0.0"
description = "Model api for disease detection"
authors = ["Robin Marquet <robin.marquet@epitech.eu>"]
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.2.2"
Flask-Injector = "^0.14.0"
flask-restx = "^1.0.3"
gunicorn = "^20.1.0"
honcho = "^1.1.0"
python-dotenv = "^0.20.0"
tqdm = "^4.64.1"
alfred-cli = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
psycopg2-binary = "^2.9.5"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
retrying = "^1.3.3"
fake-store = "^0.2"
vcrpy = "^4.2.1"
decorator = "^5.1.1"
werkzeug = "^2.2.2"
requests = "^2.28.1"
transformers = "^4.25.1"
torch = "^2.0.1"
torchvision = "^0.15.2"
sqlalchemy-cockroachdb = "^1.4.4"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
retrying = "^1.3.4"
plumbum = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
